# cloudformation-cli-python-plugin

./: .gitallowed  .gitexclude  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  CONTRIBUTING.md  MANIFEST.in  NOTICE  README.md  before_deploy.sh  buildspec.yml  e2e-test.sh  mypy.ini  package_lib.sh  requirements.txt  setup.cfg  setup.py
.github/workflows/: pr-ci.yml  pypi-lib-release.yaml  pypi-release.yaml
src/: MANIFEST.in  setup.py
src/aws_cloudformation_rpdk_python_lib/: __init__.py  boto3_proxy.py  exceptions.py  interface.py  log_delivery.py  resource.py  utils.py
src/cfn_resource/: __init__.py  base_resource_model.py  boto3_proxy.py  exceptions.py  handler_wrapper.py  metrics.py  request.py  response.py  scheduler.py  utils.py
src/cloudformation_cli_python_lib/: __init__.py  boto3_proxy.py  callback.py  cipher.py  exceptions.py  hook.py  identifier_utils.py  interface.py  log_delivery.py  metrics.py  recast.py  resource.py  scheduler.py  utils.py
src/tests/: mock_handler.py  test_boto3_proxy.py  test_exceptions.py  test_handler_wrapper.py  test_metrics.py  test_resource_model.py  test_scheduler.py  test_utils.py
tests/: functional-tests.sh  test_codegen.py
tests/data/: schema-with-typeconfiguration.json
tests/lib/: boto3_proxy_test.py  callback_test.py  cipher_test.py  exceptions_test.py  hook_test.py  identifier_utils_test.py  interface_test.py  log_delivery_test.py  metrics_test.py  recast_test.py  resource_test.py  sample_model.py  scheduler_test.py  utils_test.py
tests/plugin/: codegen_test.py  parser_test.py  resolver_test.py
(+69 files in other folders)
