[metadata]
license_file = LICENSE
description-file = README.md

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    .tox
max-complexity = 10
max-line-length = 88
select = C,E,F,W,B,B950
# C812, C815, W503 clash with black, F723 false positive
ignore = E501,C812,C815,C816,W503,F723

[isort]
line_length = 88
indent = '    '
multi_line_output = 3
default_section = FIRSTPARTY
skip = env
include_trailing_comma = true
combine_as_imports = True
force_grid_wrap = 0
known_standard_library = dataclasses
known_first_party = rpdk
known_third_party = boto3,jinja2,cloudformation_cli_python_lib,pytest

[tool:pytest]
# can't do anything about 3rd party modules, so don't spam us
filterwarnings =
    ignore::DeprecationWarning:botocore

[mypy-setuptools] # don't want to stub external libraries for now
ignore_missing_imports = True
